--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:YP8yu0x9H6ZeN+Ycx0yk1WKYXXiutbnRhgDKYUnFWUA=
 APP_DEBUG=true
 APP_URL=https://mylaraveltestingapp.herokuapp.com/
 
